# substack-automation

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  substack.py
.github/: ci.yml
archive/2025/: index.html
docs/: .authors.yml  index.md  library.md  projects-option-1.md  projects-option-1a.md  projects-option-2.md  projects-option-3.md  projects.md
docs/.github/workflows/: ci.yml
docs/assets/: Projects Page and Detail Page Template.md
docs/posts/: post_20250429.md  post_20250526.md  post_20250531.md  post_20251211.md
docs/projects/: roman-workbench.md
euclids-toolworksconnecting-ancient-geometry-to-hand-tool-woodworking/: index.html
euclids-toolworkswoke-up-this-morning-with-a-wine-glass-in-my-hand/: index.html
projects/: index.html
shop-update/: index.html
welcome-to-euclids-toolworks/: index.html
why-euclids-toolworks/: index.html
